// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandError can render component and create errors file 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: tomo-errors.txt,
            size: 0,
            type: file
        }
    ],
    size: 0,
    type: directory
}
"
`;

exports[`CommandError can render component and create errors file 2`] = `
"
 [31m[1m✖ [22m[39mSomething has gone horribly [31m[1mwrong[22m[39m
   ↳ [2mDetails written to ./tomo-errors.txt[22m"
`;

exports[`Task component can render (completed) 1`] = `"   [32m[1m✔ [22m[39m[2mtest task text[22m"`;

exports[`Task component can render (errored) 1`] = `"   [31m[1m✖ [22m[39mtest task text"`;

exports[`Task component can render (pending) 1`] = `"   [36m⠋[39m[39m[36m [39m[39m[39mtest task text[39m"`;

exports[`Task component can render (skipped) 1`] = `"   [2m[1m✔ [2m[22m[2mtest task text[22m"`;

exports[`Task component can render with default text 1`] = `"   [32m[1m✔ [22m[39m[2mtask description[22m"`;

exports[`Warning can render 1`] = `
"[33m[39m
[33m ┌─────────┐[39m
 [33m│[39m [33moops...[39m [33m│[39m
[33m └─────────┘[39m
    ↳ Hello World

      [2mPress [22m[1mENTER[22m[2m to continue[22m
"
`;

exports[`populateQueue function can only run tasks that pass condition 1`] = `
Object {
  "foo": "bar",
  "isNotOffline": true,
}
`;

exports[`populateQueue function can only run tasks that pass condition 2`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "online": true,
      },
      "type": "status",
    },
  ],
  Array [
    Object {
      "payload": 0,
      "type": "complete",
    },
  ],
  Array [
    Object {
      "payload": 1,
      "type": "skipped",
    },
  ],
  Array [
    Object {
      "payload": 2,
      "type": "complete",
    },
  ],
  Array [
    Object {
      "payload": 3,
      "type": "skipped",
    },
  ],
]
`;

exports[`populateQueue function can run tasks with options and dispatch task results 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "online": true,
      },
      "type": "status",
    },
  ],
  Array [
    Object {
      "payload": 0,
      "type": "complete",
    },
  ],
  Array [
    Object {
      "payload": 1,
      "type": "complete",
    },
  ],
  Array [
    Object {
      "payload": 2,
      "type": "complete",
    },
  ],
]
`;

exports[`tomo add 1`] = `
"
 [36mAdd automated [1maccessibility[22m testing[39m

 [36m[1m→[22m[39m [39m[36m[1ma11y[22m[39m[39m
   babel
   browsersync
   electron
   esdoc
   eslint
   jest
   makefile
   marionette
   parcel
   postcss
   rollup
   webpack
"
`;

exports[`tomo add 2`] = `
"
 [36mUse next generation JavaScript, [1mtoday![22m[39m

   a11y
 [36m[1m→[22m[39m [39m[36m[1mbabel[22m[39m[39m
   browsersync
   electron
   esdoc
   eslint
   jest
   makefile
   marionette
   parcel
   postcss
   rollup
   webpack
"
`;

exports[`tomo add eslint --use-react 1`] = `
"[36m[39m
[36m ╭────────────╮[39m
 [36m│[39m [37m[1madd eslint[22m[39m [36m│[39m
[36m ╰────────────╯[39m
   [32m[1m✔ [22m[39m[2mCreate Babel config file[22m
   [2m[1m✔ [2m[22m[2mInstall Babel core, CLI, presets, and plugins[22m
   [32m[1m✔ [22m[39m[2mAdd React support to Babel configuration file[22m
   [32m[1m✔ [22m[39m[2mCreate ESLint configuration and .eslintignore files[22m
   [2m[1m✔ [2m[22m[2mAdd lint tasks to package.json[22m
   [2m[1m✔ [2m[22m[2mInstall ESLint dependencies[22m
   [36m⠦[39m[39m[36m [39m[39m[39mAdd React support to ESLint configuration file[39m

"
`;

exports[`tomo add eslint 1`] = `
"[36m[39m
[36m ╭────────────╮[39m
 [36m│[39m [37m[1madd eslint[22m[39m [36m│[39m
[36m ╰────────────╯[39m
   [32m[1m✔ [22m[39m[2mCreate Babel config file[22m
   [2m[1m✔ [2m[22m[2mInstall Babel core, CLI, presets, and plugins[22m
   [32m[1m✔ [22m[39m[2mCreate ESLint configuration and .eslintignore files[22m
   [2m[1m✔ [2m[22m[2mAdd lint tasks to package.json[22m
   [2m[1m✔ [2m[22m[2mInstall ESLint dependencies[22m

"
`;

exports[`tomo remove 1`] = `
"
 [1m[33mCAUTION:[39m[22m tomo shall [1m[31mremove[39m[22m that which tomo would have [1m[32madded[39m[22m

 [36m[1m→[22m[39m [39m[36m[1ma11y[22m[39m[39m
   browsersync
   parcel
   postcss
   rollup
   webpack
"
`;

exports[`tomo remove 2`] = `
"
 [1m[33mCAUTION:[39m[22m tomo shall [1m[31mremove[39m[22m that which tomo would have [1m[32madded[39m[22m

   a11y
 [36m[1m→[22m[39m [39m[36m[1mbrowsersync[22m[39m[39m
   parcel
   postcss
   rollup
   webpack
"
`;
